--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 
 body {
     width: 100%;
-    height: 100vh;
     padding: 0 15%;
 }
 
@@ -57,7 +56,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 3.5rem;
+    gap: 5rem;
 }
 
 .img-container img {
@@ -184,6 +183,8 @@ body {
     
 }
 
+
+
 .alignment {
     position: relative;
     bottom: -22px;
@@ -226,12 +227,72 @@ h1 {
     text-decoration: underline;
 }
 
+@media screen and (max-width: 1366px) {
+    .box-container {
+        flex-direction: column-reverse;
+        height: auto;
+        width: 100%;
+    }
 
+    .details {
+        padding: 10%;
+    }
 
+    .col-left {
+        flex-direction: row;
+        flex: 1;
+    }
 
+    .row1, .row2 {
+        flex: 1
+    } 
+}
 
+@media screen and (max-width: 792px) {
+    .horizontal-line {
+        width: 22rem;
+    }
 
+    .half-case {
+        width: 27rem;
+    }
+}
 
+@media screen and (max-width: 772px) {
+    .img-container img {
+        margin-top: 3rem;
+    }
 
+    .horizontal-line {
+        border-bottom: none;
+    }
+}
 
+@media screen and (max-width: 775px) {
+    .row4 {
+        flex-direction: column;
+    }
 
+    .col-left {
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 465px) {
+    body {
+        padding: 0 10%;
+    }
+}
+
+@media screen and (max-width: 457px) {
+    .half-case {
+        width: 13rem;
+    }
+}
+
+@media screen and (max-width: 457px) {
+    .colors-selection3 {
+    position: relative;
+    top: -1rem;
+}
+}
